<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="30dp">

    <TextView
        android:id="@+id/title_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@values/fontregular"
        android:text="@string/home"
        android:textColor="@color/semiblack"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@values/fontregular"
                android:text="@string/welcome"
                android:textColor="@color/semiblack"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/text_view_username"
                android:layout_marginStart="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@values/fontregular"
                android:text="@string/username"
                android:textColor="@color/purple_primary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@values/fontregular"
            android:text="@string/activated"
            android:textColor="@color/semiblack"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/text_view_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@values/fontregular"
            android:text="@string/phone_regis"
            android:textColor="@color/semiblack"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>