<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".SecondaryActivity">

    <TextView
        android:id="@+id/title_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@values/fontregular"
        android:text="@string/regis"
        android:textColor="@color/semiblack"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_bg"
            android:hint="@string/username"
            android:padding="14dp"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp"
            android:fontFamily="@values/fontregular"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/text_bg"
            android:fontFamily="@values/fontregular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/edit_text_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/text_bg"
            android:fontFamily="@values/fontregular"
            android:hint="@string/number"
            android:inputType="number"
            android:padding="14dp"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp"
            android:importantForAutofill="no"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/text_bg"
            android:fontFamily="@values/fontregular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp"
            android:importantForAutofill="no" />

        <CheckBox
            android:layout_marginTop="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@values/fontregular"
            android:padding="5dp"
            android:text="@string/terms_condition"
            android:textColor="@color/semiblack"
            android:textSize="11sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@values/fontregular"
            android:text="@string/regis"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/have_acc"
                android:fontFamily="@values/fontregular"
                android:text="@string/have_acc"
                android:textColor="@color/semiblack" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/have_acc"
                android:fontFamily="@values/fontregular"
                android:text="@string/login"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/purple_primary"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>