<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/title_homepage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@values/fontbold"
        android:text="@string/login"
        android:textColor="@color/semiblack"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_bg"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:padding="14dp"
            android:inputType="text"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp"
            android:fontFamily="@font/fontregular"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/text_bg"
            android:hint="@string/password"
            android:padding="14dp"
            android:textColorHint="@color/hintcolor"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:fontFamily="@values/fontregular"
            android:importantForAutofill="no" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@values/fontregular"
                android:padding="5dp"
                android:text="@string/remember"
                android:textColor="@color/semiblack"
                android:textSize="11sp"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/have_acc"
                android:fontFamily="@values/fontregular"
                android:text="@string/forgot"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textSize="11sp"
                android:textColor="@color/purple_primary"
                android:layout_weight="1"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@values/fontbold"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/have_acc"
                android:fontFamily="@values/fontregular"
                android:text="@string/new_member"
                android:textColor="@color/semiblack" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/have_acc"
                android:fontFamily="@values/fontregular"
                android:text="@string/regis"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/purple_primary" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>